Add responsive drawer to all side navigation examples

--- a/templates/docs/examples/patterns/side-navigation/dark.html
+++ b/templates/docs/examples/patterns/side-navigation/dark.html
@@ -11,12 +11,13 @@
   <div class="col-4">
       {% include "docs/examples/patterns/side-navigation/_default.html" %}
   </div>
-  <div class="col-4" style="background: #003b4e">
+  <div class="col-4">
       {% include "docs/examples/patterns/side-navigation/_icons.html" %}
   </div>
 </div>
 
 <script>
   {% include "docs/examples/patterns/side-navigation/_example_script.js" %}
+  {% include "docs/examples/patterns/side-navigation/_toggle_script.js" %}
 </script>
 {% endblock %}
