--- a/templates/docs/examples/patterns/side-navigation/_default.html
+++ b/templates/docs/examples/patterns/side-navigation/_default.html
@@ -1,95 +1,110 @@
 <div class="p-side-navigation {% if is_dark %}is-dark{% endif %}">
-  <ul class="p-side-navigation__list">
-    <li class="p-side-navigation__item--title">
-      <a class="p-side-navigation__link" href="#">Title that is a link</a>
-    </li>
-    <li class="p-side-navigation__item">
-      <a class="p-side-navigation__link" href="#">First level link</a>
-    </li>
-    <li class="p-side-navigation__item">
-      <a class="p-side-navigation__link" href="#">First level link with status<div class="p-side-navigation__status"><i class="p-icon--error"></i></div></a>
-    </li>
-    <li class="p-side-navigation__item">
-      <a class="p-side-navigation__link" href="#">Link with children</a>
-      <ul class="p-side-navigation__list">
-        <li class="p-side-navigation__item">
-          <a class="p-side-navigation__link" href="#">Second level link<div class="p-side-navigation__status"><i class="p-icon--warning"></i></div></a>
-        </li>
-        <li class="p-side-navigation__item ">
-          <span class="p-side-navigation__text">Second level text</span>
-        </li>
-        <li class="p-side-navigation__item ">
-          <a class="p-side-navigation__link" href="#">Second level link with children</a>
-          <ul class="p-side-navigation__list">
-            <li class="p-side-navigation__item">
-              <span class="p-side-navigation__text">Third level text</span>
-            </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#"><span class="u-truncate">Third level link with label that is truncated because it's long long long long long</span><div class="p-side-navigation__status"><span class="p-label--in-progress">In progress</span></div></a>
-            </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link is-active" href="#">Third level active link</a>
-            </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">Third level link with status<div class="p-side-navigation__status"><i class="p-icon--success"></i></div></a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li class="p-side-navigation__item ">
-      <span class="p-side-navigation__text">First level item that is not a link</span>
-    </li>
-    <li class="p-side-navigation__item ">
-      <a class="p-side-navigation__link" href="#">First level link with a label<div class="p-side-navigation__status"><span class="p-label--new">New</span></div></a>
-    </li>
-    <li class="p-side-navigation__item ">
-      <a class="p-side-navigation__link" href="#">First level link with a label is long and wraps wraps wraps wraps wraps wraps<div class="p-side-navigation__status"><span class="p-label--updated">Updated</span></div></a>
-    </li>
-    <li class="p-side-navigation__item ">
-      <a class="p-side-navigation__link" href="#"><span class="u-truncate">First level link with label that is truncated because it's long long long long long long long</span><div class="p-side-navigation__status"><span class="p-label--validated">Validated</span></div></a>
-    </li>
-  </ul>
-  <ul class="p-side-navigation__list">
-    <li class="p-side-navigation__item--title">
-      <span class="p-side-navigation__text">Title that is not a link</span>
-    </li>
-    <li class="p-side-navigation__item">
-      <span class="p-side-navigation__text">First level text</span>
-    </li>
-    <li class="p-side-navigation__item">
-      <span class="p-side-navigation__text">Text item with children</span>
-      <ul class="p-side-navigation__list">
-        <li class="p-side-navigation__item">
-          <a class="p-side-navigation__link" href="#">Second level link</a>
-        </li>
-        <li class="p-side-navigation__item ">
-          <span class="p-side-navigation__text">Second level text</span>
-        </li>
-        <li class="p-side-navigation__item ">
-          <span class="p-side-navigation__text">Second level text with children</span>
-          <ul class="p-side-navigation__list">
-            <li class="p-side-navigation__item">
-              <span class="p-side-navigation__text">Third level text</span>
-            </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link is-active" href="#">Third level active item that is long and wraps wraps wraps wraps wraps wraps</a>
-            </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#"><span class="u-truncate">Third level link that is truncated because it's long long long long long long long</span></a>
-            </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">Third level link</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li class="p-side-navigation__item ">
-      <span class="p-side-navigation__text">First level item that is not a link</span>
-    </li>
-    <li class="p-side-navigation__item ">
-      <a class="p-side-navigation__link" href="#">First level link</a>
-    </li>
-  </ul>
+
+  <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
+    Toggle side navigation
+  </button>
+
+  <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
+
+  <div class="p-side-navigation__drawer" id="drawer">
+    <div class="p-side-navigation__drawer-header">
+      <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
+        Toggle side navigation
+      </button>
+    </div>
+
+    <ul class="p-side-navigation__list">
+      <li class="p-side-navigation__item--title">
+        <a class="p-side-navigation__link" href="#">Title that is a link</a>
+      </li>
+      <li class="p-side-navigation__item">
+        <a class="p-side-navigation__link" href="#">First level link</a>
+      </li>
+      <li class="p-side-navigation__item">
+        <a class="p-side-navigation__link" href="#">First level link with status<div class="p-side-navigation__status"><i class="p-icon--error"></i></div></a>
+      </li>
+      <li class="p-side-navigation__item">
+        <a class="p-side-navigation__link" href="#">Link with children</a>
+        <ul class="p-side-navigation__list">
+          <li class="p-side-navigation__item">
+            <a class="p-side-navigation__link" href="#">Second level link<div class="p-side-navigation__status"><i class="p-icon--warning"></i></div></a>
+          </li>
+          <li class="p-side-navigation__item ">
+            <span class="p-side-navigation__text">Second level text</span>
+          </li>
+          <li class="p-side-navigation__item ">
+            <a class="p-side-navigation__link" href="#">Second level link with children</a>
+            <ul class="p-side-navigation__list">
+              <li class="p-side-navigation__item">
+                <span class="p-side-navigation__text">Third level text</span>
+              </li>
+              <li class="p-side-navigation__item ">
+                <a class="p-side-navigation__link" href="#"><span class="u-truncate">Third level link with label that is truncated because it's long long long long long</span><div class="p-side-navigation__status"><span class="p-label--in-progress">In progress</span></div></a>
+              </li>
+              <li class="p-side-navigation__item ">
+                <a class="p-side-navigation__link is-active" href="#">Third level active link</a>
+              </li>
+              <li class="p-side-navigation__item ">
+                <a class="p-side-navigation__link" href="#">Third level link with status<div class="p-side-navigation__status"><i class="p-icon--success"></i></div></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li class="p-side-navigation__item ">
+        <span class="p-side-navigation__text">First level item that is not a link</span>
+      </li>
+      <li class="p-side-navigation__item ">
+        <a class="p-side-navigation__link" href="#">First level link with a label<div class="p-side-navigation__status"><span class="p-label--new">New</span></div></a>
+      </li>
+      <li class="p-side-navigation__item ">
+        <a class="p-side-navigation__link" href="#">First level link with a label is long and wraps wraps wraps wraps wraps wraps<div class="p-side-navigation__status"><span class="p-label--updated">Updated</span></div></a>
+      </li>
+      <li class="p-side-navigation__item ">
+        <a class="p-side-navigation__link" href="#"><span class="u-truncate">First level link with label that is truncated because it's long long long long long long long</span><div class="p-side-navigation__status"><span class="p-label--validated">Validated</span></div></a>
+      </li>
+    </ul>
+    <ul class="p-side-navigation__list">
+      <li class="p-side-navigation__item--title">
+        <span class="p-side-navigation__text">Title that is not a link</span>
+      </li>
+      <li class="p-side-navigation__item">
+        <span class="p-side-navigation__text">First level text</span>
+      </li>
+      <li class="p-side-navigation__item">
+        <span class="p-side-navigation__text">Text item with children</span>
+        <ul class="p-side-navigation__list">
+          <li class="p-side-navigation__item">
+            <a class="p-side-navigation__link" href="#">Second level link</a>
+          </li>
+          <li class="p-side-navigation__item ">
+            <span class="p-side-navigation__text">Second level text</span>
+          </li>
+          <li class="p-side-navigation__item ">
+            <span class="p-side-navigation__text">Second level text with children</span>
+            <ul class="p-side-navigation__list">
+              <li class="p-side-navigation__item">
+                <span class="p-side-navigation__text">Third level text</span>
+              </li>
+              <li class="p-side-navigation__item ">
+                <a class="p-side-navigation__link is-active" href="#">Third level active item that is long and wraps wraps wraps wraps wraps wraps</a>
+              </li>
+              <li class="p-side-navigation__item ">
+                <a class="p-side-navigation__link" href="#"><span class="u-truncate">Third level link that is truncated because it's long long long long long long long</span></a>
+              </li>
+              <li class="p-side-navigation__item ">
+                <a class="p-side-navigation__link" href="#">Third level link</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li class="p-side-navigation__item ">
+        <span class="p-side-navigation__text">First level item that is not a link</span>
+      </li>
+      <li class="p-side-navigation__item ">
+        <a class="p-side-navigation__link" href="#">First level link</a>
+      </li>
+    </ul>
+  </div>
 </div>
