Remove max-width limit from drawer on big screens

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -91,6 +91,7 @@
 
     .p-side-navigation__drawer {
       display: block;
+      max-width: none;
       position: static;
       transform: translateX(0%);
     }
