Reset overflow for drawer on large screens

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -92,6 +92,7 @@
     .p-side-navigation__drawer {
       display: block;
       max-width: none;
+      overflow: visible;
       position: static;
       transform: translateX(0%);
     }
