--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -30,16 +30,20 @@
   }
 
   .p-side-navigation__overlay {
+    @include vf-animation(opacity);
+
     bottom: 0;
-    display: none;
     left: 0;
+    opacity: 0;
+    pointer-events: none;
     position: fixed;
     right: 0;
     top: 0;
     z-index: 11;
 
     &.is-expanded {
-      display: block;
+      opacity: 1;
+      pointer-events: all;
     }
   }
 
@@ -101,7 +105,7 @@
       transform: translateX(0%);
     }
 
-    .p-side-navigation__overlay.is-expanded {
+    .p-side-navigation__overlay {
       display: none;
     }
   }
