--- a/templates/docs/examples/patterns/side-navigation/_default.html
+++ b/templates/docs/examples/patterns/side-navigation/_default.html
@@ -1,4 +1,4 @@
-<div class="p-side-navigation {% if is_dark %}is-dark{% endif %}">
+<div class="p-side-navigation {% if is_dark %}is-dark{% endif %}" id="drawer">
 
   <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
     Toggle side navigation
@@ -6,7 +6,7 @@
 
   <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
-  <div class="p-side-navigation__drawer" id="drawer">
+  <div class="p-side-navigation__drawer">
     <div class="p-side-navigation__drawer-header">
       <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
         Toggle side navigation
