--- a/templates/docs/examples/patterns/side-navigation/docs.html
+++ b/templates/docs/examples/patterns/side-navigation/docs.html
@@ -4,14 +4,14 @@
 {% block standalone_css %}patterns_side-navigation{% endblock %}
 
 {% block content %}
-<div class="p-side-navigation">
+<div class="p-side-navigation" id="drawer">
   <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
     Toggle side navigation
   </button>
 
   <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
-  <div class="p-side-navigation__drawer" id="drawer">
+  <div class="p-side-navigation__drawer">
     <div class="p-side-navigation__drawer-header">
       <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
         Toggle side navigation
