--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -49,7 +49,7 @@
 <div class="p-strip is-shallow">
   <div class="row">
     <aside class="col-3">
-      <nav class="p-side-navigation">
+      <nav class="p-side-navigation" id="drawer">
 
         <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
           Toggle side navigation
@@ -57,7 +57,7 @@
 
         <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
-        <div class="p-side-navigation__drawer" id="drawer">
+        <div class="p-side-navigation__drawer">
           <div class="p-side-navigation__drawer-header">
             <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
               Toggle side navigation
