--- a/templates/docs/examples/patterns/side-navigation/_icons.html
+++ b/templates/docs/examples/patterns/side-navigation/_icons.html
@@ -1,4 +1,4 @@
-<div class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}">
+<div class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}" id="drawer-icons">
   <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer-icons">
     Toggle side navigation
   </button>
@@ -8,7 +8,7 @@
   {% if is_dark %}
   <!-- dark background color should be changed via color theme variables, inline style is used here for example purposes -->
   {% endif %}
-  <div class="p-side-navigation__drawer" id="drawer-icons" {% if is_dark %}style="background: #003b4e"{% endif %}>
+  <div class="p-side-navigation__drawer" {% if is_dark %}style="background: #003b4e"{% endif %}>
     <div class="p-side-navigation__drawer-header" {% if is_dark %}style="background: #003b4e"{% endif %}>
       <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer-icons">
         Toggle side navigation
