--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -1,12 +1,12 @@
 {% extends "_layouts/_root.html" %}
 
 {% block custom_head %}
-    <link rel="stylesheet" href="/static/build/css/docs/docs.css" />
+    <link rel="stylesheet" href="/static/build/css/build.css" />
 {% endblock %}
 
 {% block body %}
     <header id="navigation" class="p-navigation">
-      <div class="p-navigation__row--full-width">
+      <div class="p-navigation__row">
         <div class="p-navigation__banner">
           <div class="p-navigation__logo">
             <a class="p-navigation__item" href="/">
@@ -16,7 +16,6 @@
           <div class="p-navigation__toggles u-hide--large u-hide--medium">
             <a href="#navigation" class="p-navigation__toggle--open" title="about menu">About</a>
             <a href="#navigation-closed" class="p-navigation__toggle--close" title="close about menu">About</a>
-            <a class="p-sidebar__toggle u-hide--medium u-hide--large" href="#">Docs</a>
           </div>
         </div>
         <nav class="p-navigation__nav">
@@ -40,9 +39,25 @@
     </header>
 
     <hr class="u-no-margin u-hide--small">
-    <div class="docs-container">
-      <aside class="p-sidebar">
-        <nav class="p-side-navigation">
+
+    {% block banner %}{% endblock %}
+
+    <div class="p-strip is-shallow is-bordered">
+    <div class="row">
+      <aside class="col-3">
+        <nav class="p-side-navigation" id="side-navigation">
+          <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="side-navigation">
+            Toggle side navigation
+          </button>
+
+          <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="side-navigation"></div>
+
+          <div class="p-side-navigation__drawer">
+            <div class="p-side-navigation__drawer-header">
+              <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="side-navigation">
+                Toggle side navigation
+              </button>
+            </div>
 
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Welcome</span></li>
@@ -51,8 +66,6 @@
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/customising-vanilla' %}is-active{% endif %}" href="/docs/customising-vanilla">Customising Vanilla</a></li>
               <li class="p-side-navigation__item"><a class="p-side-navigation__link" href="https://github.com/canonical-web-and-design/vanilla-framework/releases/latest">What’s new in {{ version }}</a></li>
             </ul>
-
-
 
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Base elements</span></li>
@@ -97,8 +110,6 @@
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/patterns/tooltips' %}is-active{% endif %}" href="/docs/patterns/tooltips">Tooltips</a></li>
             </ul>
 
-
-
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Utilities</span></li>
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/utilities/align' %}is-active{% endif %}" href="/docs/utilities/align">Alignment</a></li>
@@ -121,8 +132,6 @@
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/utilities/vertically-center' %}is-active{% endif %}" href="/docs/utilities/vertically-center">Vertically center</a></li>
             </ul>
 
-
-
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Settings</span></li>
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/settings/animation-settings' %}is-active{% endif %}" href="/docs/settings/animation-settings">Animations</a></li>
@@ -136,69 +145,33 @@
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/settings/table-layout' %}is-active{% endif %}" href="/docs/settings/table-layout">Table layout</a></li>
             </ul>
 
-
-
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Resources</span></li>
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/examples' %}is-active{% endif %}" href="/docs/examples">Component examples</a></li>
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/component-status' %}is-active{% endif %}" href="/docs/component-status">Component status</a></li>
-              <li class="p-side-navigation__item"><a class="p-side-navigation__link" href="https://assets.ubuntu.com/latest-redirects/vanilla-framework.sketch">Download the Sketch UI Kit</a></li>
+              <li class="p-side-navigation__item"><a class="p-side-navigation__link" href="https://assets.ubuntu.com/latest-redirects/vanilla-framework.sketch">Download Sketch UI Kit</a></li>
             </ul>
 
+          </div>
         </nav>
 
       </aside>
 
-      <main class="p-content" id="main-content">
-        {% block banner %}{% endblock %}
-        <div class="p-strip is-shallow">
-          <div class="p-content__row">
-            {% block content %}{{ content | safe }}{% endblock content %}
-          </div>
-        </div>
-
-        <hr>
-
-        {% include "_layouts/_footer.html" %}
+      <main class="col-9" id="main-content">
+        {% block content %}{{ content | safe }}{% endblock content %}
       </main>
 
-      <aside id="side-content" class="u-hide--small p-aside js-contents" style="display: none">
-        <div class="p-aside__section">
-          <h4 class="p-aside__header">Contents</h4>
-          <nav class="p-aside__nav">
-            <ul class="p-list js-contents-list"></ul>
-          </nav>
-        </div>
-      </aside>
-
-      <script>
-        let aside = document.querySelector('.js-contents');
-        let list = aside.querySelector('.js-contents-list');
-
-        let item = document.createElement('li');
-        let anchor = document.createElement('a');
-        anchor.classList.add('p-toc__link');
-        item.classList.add('p-toc__item');
-
-        // Add all H3s with IDs to the "Contents" list
-        [].slice.call(document.querySelectorAll('main h3[id]')).forEach(
-          function(heading) {
-            let thisItem = item.cloneNode();
-            let thisAnchor = anchor.cloneNode();
-            thisAnchor.setAttribute('href', '#' + heading.id);
-            thisAnchor.textContent = heading.textContent;
-            thisItem.appendChild(thisAnchor);
-            list.appendChild(thisItem);
-          }
-        )
-
-        // Display the "Contents" list, if there are items
-        if (list.querySelectorAll('li').length > 0) {
-          aside.style.display = 'block';
-        }
-      </script>
     </div>
+    </div>
+
+    {% include "_layouts/_footer.html" %}
+
     <script src="/static/js/scripts.js"></script>
     <script defer src="https://static.codepen.io/assets/embed/ei.js"></script>
     <script defer src="/static/js/example.js"></script>
+
+    <!-- include properly as external JS -->
+    <script>
+      {% include "docs/examples/patterns/side-navigation/_toggle_script.js" %}
+    </script>
 {% endblock %}
