--- a/templates/docs/index.html
+++ b/templates/docs/index.html
@@ -3,7 +3,7 @@
 
 {% block banner %}
 <div class="p-strip--image is-dark" style="background-image: url('https://assets.ubuntu.com/v1/775cc62b-vanilla-grad-background.png'); background-position: 75% 50%;">
-  <div class="p-content__row">
+  <div class="row">
     <h1>Vanilla documentation</h1>
     <p class="p-heading--four">Everything you need to get your project started with Vanilla.</p>
   </div>
