Add table of content items on docs pages to side navigation

--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -135,7 +135,7 @@
     <script defer src="https://static.codepen.io/assets/embed/ei.js"></script>
     <script defer src="/static/js/example.js"></script>
 
-    <!-- include properly as external JS -->
+    <!-- TODO: include properly as external JS -->
     <script>
       {% include "docs/examples/patterns/side-navigation/_toggle_script.js" %}
     </script>
