Position sticky on side navigation

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -109,6 +109,14 @@
   }
 
   @media (min-width: $breakpoint-medium) {
+    // make whole navigation sticky on large screens
+    .p-side-navigation {
+      max-height: 100vh;
+      overflow-y: auto;
+      position: sticky;
+      top: 0;
+    }
+
     .p-side-navigation__toggle,
     .p-side-navigation__toggle--in-drawer,
     .p-side-navigation__drawer-header {
