Make sure that icons variant is sticky as well

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -110,7 +110,8 @@
 
   @media (min-width: $breakpoint-medium) {
     // make whole navigation sticky on large screens
-    .p-side-navigation {
+    .p-side-navigation,
+    .p-side-navigation--icons {
       max-height: 100vh;
       overflow-y: auto;
       position: sticky;
