Add documentation documentation page to Vanilla documentation

--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -100,6 +100,11 @@
             </ul>
 
             <ul class="p-side-navigation__list">
+              <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Layouts</span></li>
+              <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/layouts/documentation' %}is-active{% endif %}" href="/docs/layouts/documentation">Documentation</a></li>
+            </ul>
+
+            <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Settings</span></li>
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/settings/animation-settings' %}is-active{% endif %}" href="/docs/settings/animation-settings">Animations</a></li>
               <li class="p-side-navigation__item"><a class="p-side-navigation__link {% if path == '/docs/settings/assets-settings' %}is-active{% endif %}" href="/docs/settings/assets-settings">Assets</a></li>
