Turn footer into light strip

--- a/templates/_layouts/_footer.html
+++ b/templates/_layouts/_footer.html
@@ -1,4 +1,4 @@
-<footer class="p-strip is-shallow" role="contentinfo">
+<footer class="p-strip--light" role="contentinfo">
   <div class="row p-content__row">
     <div class="col-12">
       &copy; {{ now("%Y") }} Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.
