--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -9,7 +9,7 @@
 
     {% block banner %}{% endblock %}
 
-    <div class="p-strip is-shallow is-bordered">
+    <div class="p-strip is-shallow">
     <div class="row">
       <aside class="col-3">
         <nav class="p-side-navigation" id="side-navigation">
