Remove external images from examples

--- a/templates/docs/examples/templates/vertical-spacing.html
+++ b/templates/docs/examples/templates/vertical-spacing.html
@@ -38,7 +38,7 @@
         magna aliqua. Ut enim ad minim veniam</p>
     </div>
     <div class="col-6">
-      <img src="http://suplugins.com/podium/images/placeholder-05.jpg" alt="" />
+      <img src="https://assets.ubuntu.com/v1/63c08d11-suru-background.png" alt="" />
     </div>
   </div>
 </section>
