--- a/templates/docs/examples/templates/snapcraft-publicise.html
+++ b/templates/docs/examples/templates/snapcraft-publicise.html
@@ -202,7 +202,7 @@
                   <p class="snapcraft-publicise__images">
 
                     <a href="#">
-                      <img alt="Get it from the Snap Store" src="https://snapcraft.io/static/images/badges/en/snap-store-black.svg?v=49a12f8">
+                      <img alt="Get it from the Snap Store" src="https://assets.ubuntu.com/v1/03dad919-%5BEN%5D-snap-store-black-uneditable.svg">
                     </a>
                   </p>
                 </div>
@@ -243,7 +243,7 @@
                   <p class="snapcraft-publicise__images">
 
                     <a href="#">
-                      <img alt="Get it from the Snap Store" src="https://snapcraft.io/static/images/badges/en/snap-store-white.svg?v=d2596f2">
+                      <img alt="Get it from the Snap Store" src="https://assets.ubuntu.com/v1/fa3c60f8-%5BEN%5D-snap-store-white-uneditable.svg">
                     </a>
                   </p>
                 </div>
