--- a/templates/docs/examples/utilities/align.html
+++ b/templates/docs/examples/utilities/align.html
@@ -4,13 +4,13 @@
 {% block content %}
 <div>
   <div class="u-align--center">
-    <img src="http://placehold.it/160x100?text=Center" alt="" />
+    <img src="https://assets.ubuntu.com/v1/3c941888-align-center.png" alt="" />
   </div>
   <div class="u-align--left">
-    <img src="http://placehold.it/160x100?text=Left" alt="" />
+    <img src="https://assets.ubuntu.com/v1/8e93383c-align-left.png" alt="" />
   </div>
   <div class="u-align--right">
-    <img src="http://placehold.it/160x100?text=Right" alt="" />
+    <img src="https://assets.ubuntu.com/v1/de9722f5-align-right.png" alt="" />
   </div>
   <p class="u-align-text--center">Centered text</p>
   <p class="u-align-text--left">Left-aligned text</p>
