Remove external links from examples

--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -249,7 +249,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><a href="https://maas.io/docs/concepts-and-terms#heading--controllers" rel="nofollow noopener">Region controller</a> (minus PostgreSQL)</td>
+              <td><a href="#docs/concepts-and-terms#heading--controllers" rel="nofollow noopener">Region controller</a> (minus PostgreSQL)</td>
               <td>512</td>
               <td>0.5</td>
               <td>5</td>
@@ -261,7 +261,7 @@
               <td>5</td>
             </tr>
             <tr>
-              <td><a href="https://maas.io/docs/concepts-and-terms#heading--controllers" rel="nofollow noopener">Rack controller</a></td>
+              <td><a href="#docs/concepts-and-terms#heading--controllers" rel="nofollow noopener">Rack controller</a></td>
               <td>512</td>
               <td>0.5</td>
               <td>5</td>
@@ -299,8 +299,8 @@
       <ul>
         <li>the number of connecting clients (client activity)</li>
         <li>how you decide to distribute services</li>
-        <li>whether or not you use <a href="https://maas.io/docs/high-availability" rel="nofollow noopener">high availability</a></li>
-        <li>whether or not you use <a href="https://maas.io/docs/high-availability#load-balancing-(optional)" rel="nofollow noopener">load balancing</a></li>
+        <li>whether or not you use <a href="#docs/high-availability" rel="nofollow noopener">high availability</a></li>
+        <li>whether or not you use <a href="#docs/high-availability#load-balancing-(optional)" rel="nofollow noopener">load balancing</a></li>
         <li>the number of images that you choose to store (disk space affecting PostgreSQL and the rack controller)</li>
       </ul>
       <p>Also not taken into account is a possible local image mirror, which would be a large consumer of disk space.</p>
