--- a/templates/docs/examples/templates/vertical-spacing.html
+++ b/templates/docs/examples/templates/vertical-spacing.html
@@ -114,7 +114,7 @@
         <li>Assign to physical zones</li>
       </ul>
       <p>
-        <a href="https://docs.ubuntu.com/maas/2.2/intro-concepts#node-actions">Learn more about the node actions</a>
+        <a href="#maas/2.2/intro-concepts#node-actions">Learn more about the node actions</a>
       </p>
     </div>
     <div class="col-6 p-divider__block">
