--- a/templates/docs/examples/patterns/links/links-external.html
+++ b/templates/docs/examples/patterns/links/links-external.html
@@ -5,23 +5,23 @@
 
 {% block content %}
 <h1>
-    <a href="https://www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
+    <a href="#www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
         NFV Strategy Director – talking about OSM at the SDN NFV World Congress 2017</a>
 </h1>
 <h2>
-    <a href="https://www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
+    <a href="#www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
             NFV Strategy Director – talking about OSM at the SDN NFV World Congress 2017</a>
 </h2>
 <h3>
-    <a href="https://www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
+    <a href="#www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
     NFV Strategy Director – talking about OSM at the SDN NFV World Congress 2017</a>
 </h3>
 <h4>
-    <a href="https://www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
+    <a href="#www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
         NFV Strategy Director – talking about OSM at the SDN NFV World Congress 2017</a>
 </h4>
 <p>
-    <a href="https://www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
+    <a href="#www.youtube.com/watch?v=Sv3Z_gbRVgQ" class="p-link--external">Listen to Nathan Rader – Canonical’s
         NFV Strategy Director – talking about OSM at the SDN NFV World Congress 2017</a>
 </p>
 {% endblock %}
