--- a/templates/docs/examples/patterns/modal.html
+++ b/templates/docs/examples/patterns/modal.html
@@ -16,11 +16,11 @@
     <div class="p-heading-icon--small">
       <div class="p-heading-icon__header">
         <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/b81a45e4-kubernetes.svg" />
-        <p><a class="p-heading-icon__title" href="https://tutorials.ubuntu.com/tutorial/get-started-canonical-kubernetes" width="24">Kubernetes tutorial</a></p>
+        <p><a class="p-heading-icon__title" href="#tutorial/get-started-canonical-kubernetes" width="24">Kubernetes tutorial</a></p>
       </div>
       <div class="p-heading-icon__header">
         <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/5e3456e3-hadoop.svg" />
-        <p><a class="p-heading-icon__title" href="https://tutorials.ubuntu.com/tutorial/get-started-hadoop-spark" width="24">Hadoop Spark tutorial</a></p>
+        <p><a class="p-heading-icon__title" href="#tutorial/get-started-hadoop-spark" width="24">Hadoop Spark tutorial</a></p>
       </div>
     </div>
   </div>
