Update SCSS files to match new prettier formatting

--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -15,7 +15,7 @@ $box-offsets-top: (
   unpadded-text: 2.125,
   muted-heading: 2.333,
   muted-inline-heading: 2,
-  table-header: 1.9
+  table-header: 1.9,
 ) !default;
 
 @mixin vf-b-tick-elements {
