--- a/scss/_settings_animations.scss
+++ b/scss/_settings_animations.scss
@@ -4,12 +4,12 @@ $animation-duration: (
   fast: 0.165s,
   brisk: 0.333s,
   slow: 0.5s,
-  sleepy: 1s
+  sleepy: 1s,
 );
 
 $animation-easing: (
   out: cubic-bezier(0.215, 0.61, 0.355, 1),
-  in: cubic-bezier(0.55, 0.055, 0.675, 0.19)
+  in: cubic-bezier(0.55, 0.055, 0.675, 0.19),
 );
 
 @mixin vf-animation($property: all, $duration: brisk, $easing: out) {
