--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -32,7 +32,7 @@ $states: (
   error: $color-negative,
   caution: $color-caution,
   success: $color-positive,
-  information: $color-information
+  information: $color-information,
 );
 
 // THEME COLORS
