--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -22,7 +22,7 @@ $font-sizes: (
   h2-mobile: 1.83274,
   h2: pow($ms-ratio, 6),
   h1-mobile: pow($ms-ratio, 6),
-  h1: pow($ms-ratio, 8)
+  h1: pow($ms-ratio, 8),
 );
 
 $line-heights: (
@@ -36,7 +36,7 @@ $line-heights: (
   h4-mobile: 3 * $sp-unit,
   default-text: 3 * $sp-unit,
   small: $sp-unit * 2,
-  x-small: $sp-unit * 2
+  x-small: $sp-unit * 2,
 ) !default;
 
 // baseline nudges for type scale ratio of (16/14)^2
@@ -56,7 +56,7 @@ $nudges: (
   nudge--p: 0.4rem,
   nudge--p-ubuntumono: 0.45rem,
   nudge--small: 0.2rem,
-  nudge--x-small: 0.25rem
+  nudge--x-small: 0.25rem,
 ) !default;
 
 // Correct baseline drift due to browser rounding. (Visible in text > 1000 lines)
@@ -70,7 +70,7 @@ $browser-rounding-compensations: (
   h4: 0.001rem,
   h3: 0.001rem,
   h2: 0.001rem,
-  h1: 0.001rem
+  h1: 0.001rem,
 ) !default;
 
 ////////////////////////////////////////////////////////
@@ -120,7 +120,7 @@ $sp-after: (
   small: $spv-outer--small-scaleable,
   small--dense: $spv-outer--small-scaleable,
   x-small: $spv-outer--small-scaleable,
-  default-text: $sp-unit
+  default-text: $sp-unit,
 ) !default;
 
 // commonly occuring calculations available as variables
@@ -134,7 +134,7 @@ $max-widths: (
   long: $max-width--default,
   default: $max-width--default,
   heading--long: $max-width--default,
-  heading--short: $max-width--default
+  heading--short: $max-width--default,
 ) !default;
 
 $icon-sizes: (
@@ -144,7 +144,7 @@ $icon-sizes: (
   heading-icon--small: $sp-unit * 4,
   heading-icon: $sp-unit * 5,
   thumb: $sp-unit * 6,
-  thumb--large: $sp-unit * 12
+  thumb--large: $sp-unit * 12,
 ) !default;
 
 $table-cell-vertical-padding: $spv-inner--x-small--scaleable;
