--- a/scss/deprecate/_index.scss
+++ b/scss/deprecate/_index.scss
@@ -38,7 +38,7 @@ $deprecate-mode: 'sensible' !default;
     '6': 6,
     '7': 7,
     '8': 8,
-    '9': 9
+    '9': 9,
   );
 
   @for $i from 1 through str-length($value) {
