Disallow missing placeholders

--- a/scss/_patterns_article-pagination.scss
+++ b/scss/_patterns_article-pagination.scss
@@ -47,7 +47,7 @@
   }
 
   .p-article-pagination__link--previous {
-    @extend .p-article-pagination__link; // sass-lint:disable-line placeholder-in-extend
+    @extend .p-article-pagination__link; // stylelint-disable-line scss/at-extend-no-missing-placeholder
 
     padding-left: $sp-xx-large;
     text-align: left;
@@ -75,7 +75,7 @@
   }
 
   .p-article-pagination__link--next {
-    @extend .p-article-pagination__link; // sass-lint:disable-line placeholder-in-extend
+    @extend .p-article-pagination__link; // stylelint-disable-line scss/at-extend-no-missing-placeholder
 
     padding-right: $sp-xx-large;
     text-align: right;
