Disallow vendor prefixes

--- a/scss/_base_code.scss
+++ b/scss/_base_code.scss
@@ -16,17 +16,17 @@
 
   pre,
   code {
-    // sass-lint:disable no-vendor-prefixes property-sort-order
     direction: ltr;
+    // stylelint-disable property-no-vendor-prefix
     -webkit-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
     -moz-tab-size: 4;
     -o-tab-size: 4;
+    // stylelint-enable property-no-vendor-prefix
     tab-size: 4;
     word-spacing: normal;
     word-wrap: break-word;
-    // sass-lint:enable no-vendor-prefixes property-sort-order
   }
 
   pre code {
