--- a/scss/_patterns_code-numbered.scss
+++ b/scss/_patterns_code-numbered.scss
@@ -19,7 +19,6 @@ $sidebar-width: 4.5rem !default;
     }
 
     &::before {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
       background: $color-x-light;
       border-right: 1px solid $color-mid-light;
       color: $color-mid-dark;
@@ -33,11 +32,12 @@ $sidebar-width: 4.5rem !default;
       position: absolute;
       text-align: right;
       top: 0;
+      // stylelint-disable property-no-vendor-prefix
       -webkit-user-select: none;
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
-      // sass-lint:enable no-vendor-prefixes property-sort-order
+      // stylelint-enable property-no-vendor-prefix
       width: $sidebar-width;
     }
 
