--- a/scss/_patterns_contextual-menu.scss
+++ b/scss/_patterns_contextual-menu.scss
@@ -46,11 +46,11 @@
     @extend %p-contextual-menu;
 
     .p-contextual-menu__dropdown {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
       left: 50%;
+      // stylelint-disable property-no-vendor-prefix
       -webkit-transform: translateX(-50%);
       transform: translateX(-50%);
-      // sass-lint:enable no-vendor-prefixes property-sort-order
+      // stylelint-enable property-no-vendor-prefix
     }
   }
 
