--- a/scss/_patterns_tooltips.scss
+++ b/scss/_patterns_tooltips.scss
@@ -19,7 +19,6 @@ $triangle-height: $sp-unit;
   }
 
   .p-tooltip__message {
-    // sass-lint:disable no-vendor-prefixes property-sort-order
     @extend %small-text;
 
     background-color: $color-dark;
@@ -34,9 +33,8 @@ $triangle-height: $sp-unit;
     text-align: left;
     text-decoration: initial;
     top: 100%;
-    -webkit-transform: translateX(0%) translateY(13px);
+    -webkit-transform: translateX(0%) translateY(13px); // stylelint-disable-line property-no-vendor-prefix
     transform: translateX(0%) translateY(13px);
-    // sass-lint:enable no-vendor-prefixes property-sort-order
     white-space: pre;
     z-index: 1;
 
@@ -62,20 +60,16 @@ $triangle-height: $sp-unit;
     @extend %tooltip;
 
     .p-tooltip__message {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
       bottom: inherit;
       left: 50%;
       top: 100%;
-      -webkit-transform: translateX(-50%) translateY(13px);
+      -webkit-transform: translateX(-50%) translateY(13px); // stylelint-disable-line property-no-vendor-prefix
       transform: translateX(-50%) translateY(13px);
-      // sass-lint:enable no-vendor-prefixes property-sort-order
 
       &::before {
-        // sass-lint:disable no-vendor-prefixes property-sort-order
         left: 50%;
-        -webkit-transform: translateX(-50%);
+        -webkit-transform: translateX(-50%); // stylelint-disable-line property-no-vendor-prefix
         transform: translateX(-50%);
-        // sass-lint:enable no-vendor-prefixes property-sort-order
       }
     }
   }
@@ -85,14 +79,12 @@ $triangle-height: $sp-unit;
     @extend %tooltip;
 
     .p-tooltip__message {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
       bottom: inherit;
       left: initial;
       right: -#{2 * $triangle-height};
       top: 100%;
-      -webkit-transform: translateY(13px);
+      -webkit-transform: translateY(13px); // stylelint-disable-line property-no-vendor-prefix
       transform: translateY(13px);
-      // sass-lint:enable no-vendor-prefixes property-sort-order
 
       &::before {
         left: initial;
@@ -106,13 +98,11 @@ $triangle-height: $sp-unit;
     @extend %tooltip;
 
     .p-tooltip__message {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
       bottom: 100%;
       left: -#{2 * $triangle-height};
       top: initial;
-      -webkit-transform: translateX(0%) translateY(-13px);
+      -webkit-transform: translateX(0%) translateY(-13px); // stylelint-disable-line property-no-vendor-prefix
       transform: translateX(0%) translateY(-13px);
-      // sass-lint:enable no-vendor-prefixes property-sort-order
 
       &::before {
         border: {
@@ -133,11 +123,10 @@ $triangle-height: $sp-unit;
     @extend %tooltip;
 
     .p-tooltip__message {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
       bottom: 100%;
       left: 50%;
       top: initial;
-      -webkit-transform: translateX(-50%) translateY(-13px);
+      -webkit-transform: translateX(-50%) translateY(-13px); // stylelint-disable-line property-no-vendor-prefix
       transform: translateX(-50%) translateY(-13px);
 
       &::before {
@@ -150,10 +139,9 @@ $triangle-height: $sp-unit;
 
         bottom: -#{2 * $triangle-height};
         left: 50%;
-        -webkit-transform: translateX(-50%);
+        -webkit-transform: translateX(-50%); // stylelint-disable-line property-no-vendor-prefix
         transform: translateX(-50%);
       }
-      // sass-lint:enable no-vendor-prefixes property-sort-order
     }
   }
 
@@ -162,14 +150,12 @@ $triangle-height: $sp-unit;
     @extend %tooltip;
 
     .p-tooltip__message {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
       bottom: 100%;
       left: initial;
       right: -#{2 * $triangle-height};
       top: initial;
-      -webkit-transform: translateX(0%) translateY(-13px);
+      -webkit-transform: translateX(0%) translateY(-13px); // stylelint-disable-line property-no-vendor-prefix
       transform: translateX(0%) translateY(-13px);
-      // sass-lint:enabled no-vendor-prefixes property-sort-order
 
       &::before {
         border: {
@@ -194,13 +180,10 @@ $triangle-height: $sp-unit;
       bottom: inherit;
       left: 100%;
       top: 50%;
-      // sass-lint:disable no-vendor-prefixes property-sort-order
-      -webkit-transform: translateX(14px) translateY(-50%);
+      -webkit-transform: translateX(14px) translateY(-50%); // stylelint-disable-line property-no-vendor-prefix
       transform: translateX(14px) translateY(-50%);
-      // sass-lint:enable no-vendor-prefixes property-sort-order
 
       &::before {
-        // sass-lint:disable no-vendor-prefixes property-sort-order
         border: {
           bottom: $triangle-height solid transparent;
           left: $triangle-height solid transparent;
@@ -211,9 +194,8 @@ $triangle-height: $sp-unit;
         bottom: inherit;
         left: 0;
         top: 50%;
-        -webkit-transform: translateX(-16px) translateY(-50%);
+        -webkit-transform: translateX(-16px) translateY(-50%); // stylelint-disable-line property-no-vendor-prefix
         transform: translateX(-16px) translateY(-50%);
-        // sass-lint:enable no-vendor-prefixes property-sort-order
       }
     }
   }
@@ -223,16 +205,13 @@ $triangle-height: $sp-unit;
     @extend %tooltip;
 
     .p-tooltip__message {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
       bottom: inherit;
       left: -16px;
       top: 50%;
-      -webkit-transform: translateX(-100%) translateY(-50%);
+      -webkit-transform: translateX(-100%) translateY(-50%); // stylelint-disable-line property-no-vendor-prefix
       transform: translateX(-100%) translateY(-50%);
-      // sass-lint:enable no-vendor-prefixes property-sort-order
 
       &::before {
-        // sass-lint:disable no-vendor-prefixes property-sort-order
         border: {
           bottom: $triangle-height solid transparent;
           left: $triangle-height solid $color-dark;
@@ -243,9 +222,8 @@ $triangle-height: $sp-unit;
         bottom: inherit;
         left: 100%;
         top: 50%;
-        -webkit-transform: translateX(0) translateY(-50%);
+        -webkit-transform: translateX(0) translateY(-50%); // stylelint-disable-line property-no-vendor-prefix
         transform: translateX(0) translateY(-50%);
-        // sass-lint:enable no-vendor-prefixes property-sort-order
       }
     }
   }
