--- a/scss/_utilities_animations.scss
+++ b/scss/_utilities_animations.scss
@@ -8,23 +8,19 @@
   }
 
   .u-animation--spin {
-    // sass-lint:disable no-vendor-prefixes property-sort-order
-    -webkit-animation: spin map-get($animation-duration, sleepy) infinite linear;
+    -webkit-animation: spin map-get($animation-duration, sleepy) infinite linear; // stylelint-disable-line property-no-vendor-prefix
     animation: spin map-get($animation-duration, sleepy) infinite linear;
-    // sass-lint:enable no-vendor-prefixes property-sort-order
   }
 
   @keyframes spin {
-    // sass-lint:disable no-vendor-prefixes property-sort-order
     0% {
-      -webkit-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg); // stylelint-disable-line property-no-vendor-prefix
       transform: rotate(0deg);
     }
 
     100% {
-      -webkit-transform: rotate(360deg);
+      -webkit-transform: rotate(360deg); // stylelint-disable-line property-no-vendor-prefix
       transform: rotate(360deg);
     }
-    // sass-lint:enable no-vendor-prefixes property-sort-order
   }
 }
