--- a/scss/_base_forms-range.scss
+++ b/scss/_base_forms-range.scss
@@ -8,11 +8,11 @@
   $track-radius: 2px;
 
   input[type='range'] {
-    // sass-lint:disable no-vendor-prefixes property-sort-order
+    // stylelint-disable property-no-vendor-prefix
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    // sass-lint:enable no-vendor-prefixes property-sort-order
+    // stylelint-enable property-no-vendor-prefix
     border-radius: $track-radius + 1;
     margin: $sp-small 0;
     padding: 0;
@@ -26,11 +26,11 @@
     }
 
     &::-webkit-slider-thumb {
-      // sass-lint:disable no-vendor-prefixes property-sort-order
+      // stylelint-disable property-no-vendor-prefix
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
-      // sass-lint:enable no-vendor-prefixes property-sort-order
+      // stylelint-enable property-no-vendor-prefix
       background: $color-x-light;
       border: 0;
       border-radius: $thumb-radius;
