--- a/scss/_patterns_search-box.scss
+++ b/scss/_patterns_search-box.scss
@@ -50,7 +50,7 @@
     right: 0;
 
     &::-webkit-search-cancel-button {
-      -webkit-appearance: none; // sass-lint:disable-line no-vendor-prefixes
+      -webkit-appearance: none; // stylelint-disable-line property-no-vendor-prefix
     }
 
     &:not(:valid) ~ .p-search-box__reset {
